ADD: Notifications UI to swagger | notifications controller , service, routes | update server.ts to import routing api for notifications
